---------------------
subunit release notes
---------------------


0.0.2 (IN DEVELOPMENT)
----------------------

  CHANGES:

  IMPROVEMENTS:

  BUG FIXES:

  API CHANGES:

    * When a time: directive is encountered in a subunit stream, the python
      bindings now call the ``time(seconds)`` method on ``TestResult``.

  INTERNALS:

    * ExecTestCase supports passing arguments to test scripts.

    * New helper ``subunit.test_results.HookedTestResultDecorator`` which can
      be used to call some code on every event, without having to implement all
      the event methods.