@@ -213,7 +213,10 @@ class TestProtocolServer(object):
 
     def _handleTime(self, offset, line):
         # Accept it, but do not do anything with it yet.
-        event_time = iso8601.parse_date(line[offset:-1])
+        try:
+            event_time = iso8601.parse_date(line[offset:-1])
+        except TypeError, e:
+            raise TypeError("Failed to parse %r, got %r" % (line, e))
         time_method = getattr(self.client, 'time', None)
         if callable(time_method):
             time_method(event_time)
@@ -351,6 +354,16 @@ class TestProtocolClient(unittest.TestResult):
     def startTest(self, test):
         """Mark a test as starting its test run."""
         self._stream.write("test: %s\n" % test.id())
+
+    def time(self, a_datetime):
+        """Inform the client of the time.
+
+        ":param datetime: A datetime.datetime object.
+        """
+        time = a_datetime.astimezone(iso8601.Utc())
+        self._stream.write("time: %04d-%02d-%02d %02d:%02d:%02d.%06dZ\n" % (
+            time.year, time.month, time.day, time.hour, time.minute,
+            time.second, time.microsecond))
 
     def done(self):
         """Obey the testtools result.done() interface."""
