@@ -24,3 +24,6 @@ subunit release notes
     * New helper ``subunit.test_results.HookedTestResultDecorator`` which can
       be used to call some code on every event, without having to implement all
       the event methods.
+
+    * ``TestProtocolClient.time(a_datetime)`` has been added which causes a
+      timestamp to be output to the stream.
